--- a/SCZ_classify.ipynb
+++ b/SCZ_classify.ipynb
@@ -331,7 +331,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot circular graph\n",
+    "\n",
+    "fig = plt.figure(figsize=[10,10])\n",
+    "plot_connectivity_circle(np.abs(coef), node_names, indices ,fontsize_names=0, n_lines=100,\n",
+    "                         textcolor='floralwhite', facecolor='floralwhite', node_angles=layout, \n",
+    "                         node_colors=node_colors, fig=fig, colormap='Greys', colorbar=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot glass brain\n",
+    "\n",
+    "thresh = np.percentile(np.abs(features_beta_df.beta), 99)\n",
+    "beta_connectome_abs = np.abs(beta_connectome)\n",
+    "plotting.plot_connectome(beta_connectome_abs, coordinates, display_mode= 'lzry', \n",
+    "                         edge_threshold=thresh, node_size=20, node_color = node_colors, colorbar=True, edge_cmap='gist_yarg',\n",
+    "                        edge_kwargs= {'linewidth': 0.5, 'head_length':0, 'alpha':0.5})"
+   ]
   }
  ],
  "metadata": {
